# LibProsperoPKG

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  imgui.ini
.github/native/: NativeExports.cs  libprosperopkg.h
.github/workflows/: cmake.yml  native-linux.yml  native-macos.yml
docs/: README.md  api-overview.md  cpp-port-plan.md  getting-started.md  implementation-status.md  kraken-clean-room.md  lzn-codec.md  ps5-pkg-format.md
frontend/: CMakeLists.txt
frontend/app/: app_state.cpp  app_state.hpp  main.cpp
frontend/app/shell/: status_bar.cpp  status_bar.hpp  top_bar.cpp  top_bar.hpp  window.cpp  window.hpp
frontend/screens/: build_pkg.cpp  build_pkg.hpp  home.cpp  home.hpp  inspect_pkg.cpp  inspect_pkg.hpp  key_derivation.cpp  key_derivation.hpp  pfsc_editor.cpp  pfsc_editor.hpp
frontend/ui/: file_picker.cpp  file_picker.hpp  fonts.cpp  fonts.hpp  theme.cpp  theme.hpp  ui_icons.hpp  widgets.cpp  widgets.hpp
legacy/csharp/: README.md
legacy/csharp/docs/: api-overview.md  getting-started.md  implementation-status.md
legacy/csharp/src/LibProsperoPkg/: ProsperoPackageBuilder.cs
legacy/csharp/src/LibProsperoPkg/PFS/: FlatPathTable.cs  PFSCReader.cs  PfsProperties.cs  PfsReader.cs  PfsStructs.cs  PfscEncoder.cs  ProsperoOuterPfsImage.cs  ProsperoPfsImageTree.cs  ProsperoPfsLayout.cs  XtsDecryptReader.cs
legacy/csharp/src/LibProsperoPkg/PFS/Compression/: CompressedPfsFile.cs  CompressedPfsFileWriter.cs  PfsDigest.cs  PfsShuffle.cs
legacy/csharp/src/LibProsperoPkg/PFS/Compression/Oodle/: KrakenBitReader.cs  KrakenBitWriter.cs  KrakenOptimalCost.cs  OodleKrakenEncoder.cs
legacy/csharp/src/LibProsperoPkg/PKG/: Enums.cs  PkgWriter.cs  ProsperoFihBuilder.cs  ProsperoImageDigests.cs  ProsperoNapsMeta.cs  ProsperoPkgBuilder.cs  ProsperoPkgEnums.cs  ProsperoSiArchive.cs
legacy/csharp/src/LibProsperoPkg/PlayGo/: ProsperoPlayGo.cs
legacy/csharp/src/LibProsperoPkg/Util/: Keys.cs  MersenneTwister.cs  ProsperoCrc32C.cs  StreamExtensions.cs  WriterBase.cs
legacy/csharp/workflows/: native-macos.yml
reports/: lzn-benchmark.md  native-comparison.md
src/LibProsperoPkg/: LibProsperoPkg.csproj  ProsperoPackageBuilder.cs
src/LibProsperoPkg/Content/: ProsperoFself.cs  ProsperoUcp.cs
src/LibProsperoPkg/GP5/: Gp5Creator.cs  Gp5Project.cs
src/LibProsperoPkg/Keys/: ProsperoKeys.cs
src/LibProsperoPkg/Keys/Data/: pkg_meta_rsa_key.pem
src/LibProsperoPkg/PFS/: FSTree.cs  FlatPathTable.cs  PFSBuilder.cs  PFSCReader.cs  PFSCWriter.cs  PfsProperties.cs  PfsReader.cs  PfsStructs.cs  PfscEncoder.cs  ProsperoFsTree.cs  ProsperoOuterPfsBuilder.cs  ProsperoOuterPfsImage.cs  ProsperoOuterPfsSignature.cs  ProsperoPfsBuilder.cs  ProsperoPfsImage.cs  ProsperoPfsImageTree.cs  ProsperoPfsKeys.cs  ProsperoPfsLayout.cs  ProsperoPfsc.cs  ProsperoPfscWriter.cs  XtsDecryptReader.cs
src/LibProsperoPkg/PFS/Compression/: CompressedPfsFile.cs  CompressedPfsFileWriter.cs  PfsCompressionTypes.cs  PfsDigest.cs  PfsShuffle.cs  ProsperoCompressedPfsImage.cs  ProsperoPfsCompressionTypes.cs
src/LibProsperoPkg/PFS/Compression/Oodle/: KrakenBitReader.cs  KrakenBitWriter.cs  KrakenDecoder.cs  KrakenHuffmanArrayEncoder.cs  KrakenOptimalCost.cs  OodleKrakenEncoder.cs
src/LibProsperoPkg/PKG/: Entry.cs  Enums.cs  Pkg.cs  PkgWriter.cs  ProsperoCnt.cs  ProsperoCntEntry.cs  ProsperoDdsEncoder.cs  ProsperoFihBuilder.cs  ProsperoImageDigests.cs  ProsperoNapsLayout.cs  ProsperoNapsMeta.cs  ProsperoPkg.cs  ProsperoPkgBuilder.cs  ProsperoPkgEnums.cs  ProsperoPkgReader.cs  ProsperoPkgSigner.cs  ProsperoPkgWriter.cs  ProsperoSiArchive.cs  ProsperoSystemFiles.cs
src/LibProsperoPkg/PlayGo/: ProsperoPlayGo.cs
src/LibProsperoPkg/PlayGo/Data/: right.sprx
src/LibProsperoPkg/Util/: Crypto.cs  Extensions.cs  Keys.cs  MemoryMapped.cs  MersenneTwister.cs  OffsetStream.cs  ProsperoCrc32C.cs  ReaderBase.cs  StreamExtensions.cs  SubStream.cs  WriterBase.cs  XtsBlockTransform.cs
src/include/prosperopkg/: aes_xts.hpp  build.hpp  content_id.hpp  crc32c.hpp  gp5.hpp  hash.hpp  image_digests.hpp  libprosperopkg.h  lzn.hpp  lzn_block.hpp  pfs_image.hpp  pfs_keys.hpp  pfs_signature.hpp  pfsc.hpp  pkg.hpp  prosperopkg.hpp  psxpkg.h  self.hpp  ucp.hpp
src/src/: aes_xts.cpp  build.cpp  c_api.cpp  content_id.cpp  crc32c.cpp  gp5.cpp  hash.cpp  image_digests.cpp  lzn.cpp  lzn_block.cpp  pfs_image.cpp  pfs_keys.cpp  pfs_signature.cpp  pfsc.cpp  pkg.cpp  self.cpp  ucp.cpp
src/tests/: test_main.cpp
src/tools/: fself.cpp  gp5.cpp  keys.cpp  lzn.cpp  pkg_inspect.cpp
tools/: benchmark_lzn.py  check_clean_room.py  compare_native_parity.py
